opam-version: "2.0"
version: "v0.16.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/babel"
bug-reports: "https://github.com/janestreet/babel/issues"
dev-repo: "git+https://github.com/janestreet/babel.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/babel/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"            {>= "4.14.0"}
  "async_rpc_kernel" {>= "v0.16" & < "v0.17"}
  "core"             {>= "v0.16" & < "v0.17"}
  "ppx_jane"         {>= "v0.16" & < "v0.17"}
  "streamable"       {>= "v0.16" & < "v0.17"}
  "tilde_f"          {>= "v0.16" & < "v0.17"}
  "dune"             {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A library for defining Rpcs that can evolve over time without breaking backward compatibility."
description: "
A library for defining Rpcs that can evolve over time without breaking backward compatibility.
"
